Fix positioning issues with the weather widget and scrollbars.
- Fixed unnecessary scrollbars because the body was larger than 100%.
- Fixed the weather widget not respecting the widget controller's positioning. This was because the table cells were not set to position:relative, so the positioning context for child nodes inside the widget was still the entire body.
See: Issue #3

--- a/css/main.css
+++ b/css/main.css
@@ -12,11 +12,15 @@ html {
 
 body {
     font-family: Helvetica, Arial, sans-serif;
+
     display: table;
     table-layout: fixed;
 
     width: 100%;
     height: 100%;
+
+    /* Fix for the scrolling bars */
+    margin: 0;
 
     background: black;
     color: white;
@@ -30,4 +34,5 @@ body .row {
 
 body .row .cell {
     display: table-cell;
+    position: relative;
 }
